tests/NormalTests/paczka1/fuzzy1/81955803.err
Error in line 10: XOF1 A306 81,6
Error in line 28: AEjmEjc4R A104 48,4
Error in line 32: jLXplaWwQ0l A306 97,8
Error in line 36: TlkE A715 17
Error in line 33: jLXplaWwQ0l A104 83,7
